# Jauntlet

./: .gitignore  AnimationFrame.cpp  AnimationFrame.h  CMakeLists.txt  Camera2D.cpp  Camera2D.h  Credit.txt  Errors.cpp  Errors.h  GLSLProgram.cpp  GLSLProgram.h  GLTexture.h  IOManager.cpp  IOManager.h  ImageLoader.cpp  ImageLoader.h  InputKey.cpp  InputKey.h  InputManager.cpp  InputManager.h  JMath.cpp  JMath.h  Jauntlet Engine.sln  Jauntlet Engine.vcxproj  Jauntlet Engine.vcxproj.filters  Jauntlet.cpp  Jauntlet.h  Jauntlet.sln  Jauntlet.vcxproj  Jauntlet.vcxproj.filters  MainGame.cpp  MainGame.h  Navigation.cpp  Navigation.h  Pathfinding.cpp  Pathfinding.h  Player.cpp  Player.h  README.md  ResourceManager.cpp  (+22 more)
Audio/: AudioListener.cpp  AudioListener.h  AudioSource.cpp  AudioSource.h
Collision/: Collider2D.cpp  Collider2D.h  Collision2D.cpp  Collision2D.h
Debug/: Jauntlet Engine.exe.recipe  Jauntlet Engine.ilk  Jauntlet Engine.vcxproj.FileListAbsolute.txt  Jauntlet.exe.recipe  Jauntlet.idb  Jauntlet.ilk  Jauntlet.lib  Jauntlet.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/Jauntlet.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Jauntlet.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Filesystems/: FileDialogs.cpp  FileDialogs.h  FileManager.cpp  FileManager.h  JSON.cpp  JSON.h
Inputs/: InputKey.cpp  InputKey.h  InputManager.cpp  InputManager.h
Jauntlet/: Camera2D.cpp  Camera2D.h  Collider2D.h  Collision2D.cpp  Collision2D.h  Errors.cpp  Errors.h  GLSLProgram.cpp  GLSLProgram.h  GLTexture.h  IOManager.cpp  IOManager.h  ImageLoader.cpp  ImageLoader.h  InputKey.cpp  InputKey.h  InputManager.cpp  InputManager.h  JMath.cpp  JMath.h  Jauntlet.cpp  Jauntlet.h  Jauntlet.vcxproj  Jauntlet.vcxproj.filters  ResourceManager.cpp  ResourceManager.h  Sprite.cpp  Sprite.h  SpriteBatch.cpp  SpriteBatch.h  TextureCache.cpp  TextureCache.h  TileMap.cpp  TileMap.h  TileSet.cpp  TileSet.h  Time.cpp  Time.h  Timing.cpp  Timing.h  (+7 more)
Jauntlet/Collision/: Collider2D.cpp  Collider2D.h  Collision2D.cpp  Collision2D.h
Jauntlet/Rendering/: GLSLProgram.cpp  GLSLProgram.h  GLTexture.h  ImageLoader.cpp  ImageLoader.h  LineRenderer.cpp  LineRenderer.h  ResourceManager.h  Sprite.cpp  Sprite.h  SpriteBatch.cpp  SpriteBatch.h  SpriteFont.cpp  SpriteFont.h  TextureCache.h  Vertex.h  picoPNG.cpp  picoPNG.h
Jauntlet/UI/: UIElement.cpp  UIElement.h  UIManager.cpp  UIManager.h  UITextElement.cpp  UITextElement.h
Levels/: level0.txt  testAllTiles.txt
Rendering/: Animation.cpp  Animation.h  AnimationManager.h  GLSLProgram.cpp  GLSLProgram.h  GLTexture.h  ImageLoader.cpp  ImageLoader.h  LineRenderer.cpp  LineRenderer.h  Model.cpp  Model.h  ProgressBar.cpp  ProgressBar.h  ResourceManager.cpp  ResourceManager.h  Sprite.cpp  Sprite.h  SpriteBatch.cpp  SpriteBatch.h  SpriteFont.cpp  SpriteFont.h  TextRenderer.cpp  TextRenderer.h  TextureCache.h  Vertex.h  Window.cpp  Window.h  picoPNG.cpp  picoPNG.h
Rendering/Animation/: Animation.cpp  Animation.h  AnimationManager.cpp  SpriteAnimation.cpp  SpriteAnimation.h
Rendering/Cameras/: Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h
Scenes/: Scene.cpp  Scene.h
Shaders/: colorShading.frag  colorShading.vert
Tiles/: TileMap.cpp  TileMap.h  TileSet.cpp  TileSet.h
UI/: UIBatch.cpp  UIBatch.h  UIButton.cpp  UIButton.h  UIButtonElement.cpp  UIButtonElement.h  UIButtonToggleable.cpp  UIButtonToggleable.h  UIButtonToggleableElement.cpp  UIButtonToggleableElement.h  UIElement.cpp  UIElement.h  UIManager.cpp  UIManager.h  UIProgressBar.cpp  UIProgressBar.h  UIProgressBarElement.cpp  UIProgressBarElement.h  UISprite.cpp  UISprite.h  UISpriteAnimated.cpp  UISpriteAnimated.h  UISpriteAnimatedElement.cpp  UISpriteAnimatedElement.h  UISpriteElement.cpp  UISpriteElement.h  UIText.cpp  UIText.h  UITextElement.cpp  UITextElement.h
src/: MainGame.cpp  MainGame.h  Navigation.cpp  Navigation.h  Pathfinding.cpp  Pathfinding.h  Player.cpp  Player.h  main.cpp
(+26 files in other folders)
